# qt_basic

./: CMakeLists.txt  Main.qml  main.cpp
component/: counter.h  counter_for_qml.hpp
component/qml_component/: QThreadTest.qml
component/qt_core_test/: q_hash_test.h  q_string_test.h  q_variant_test.h
component/qt_thread_test/: qt_thread_object.hpp  qt_thread_test.cpp  qt_thread_test.h
